alignment fixed mainscreen

--- a/src/components/SelectLanguage/SelectLanguage.css
+++ b/src/components/SelectLanguage/SelectLanguage.css
@@ -3,6 +3,7 @@
     justify-content: space-around;
     width: 100%;
     color: white;
+    margin-bottom: 100px;
 }
 .languageContainerDiv{
     display: flex;
